--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -3,11 +3,15 @@
 
 % Acronyms
 
-\newacronym{EEG}{EEG}{Electroencephalography}
-\newacronym{BCI}{BCI}{Brain-computer interface}
-\newacronym{VEP}{VEP}{Visual evoked potential}
-\newacronym{FFT}{FFT}{Fast Fourier transform}
-\newacronym{CCA}{CCA}{Canonical correlation analysis}
+\newacronym{EEG}{EEG}{electroencephalography}
+\newacronym{BCI}{BCI}{brain-computer interface}
+\newacronym{VEP}{VEP}{visual evoked potential}
+\newacronym{FFT}{FFT}{fast Fourier transform}
+\newacronym{CCA}{CCA}{canonical correlation analysis}
+\newacronym{MEG}{MEG}{magnetoencephalography}
+\newacronym{fMRI}{fMRI}{magnetic resonance imaging}
+\newacronym{PET}{PET}{positron emission tomography}
+\newacronym{fNIRS}{fNIRS}{functional near-infrared spectroscopy}
 
 % Packages for layout testing
 
