Add sink, source, dipole text

--- a/thesis/tex/EEG.tex
+++ b/thesis/tex/EEG.tex
@@ -29,9 +29,9 @@ To send signals, neurons must be able to maintain electrical potential, called m
 
 By having stable resting potential, neuron is able to send signals by rapidly increasing and decreasing the membrane potential along an axon. Therefore, the signal travelling along an axon is actually higher membrane potential. This event is called an action potential. To increase or decrease the membrane potential of a cell, ionophoric proteins are used. These proteins transport ions across the cell membrane.
 
-Action potential is initiated by a certain threshold voltage, called threshold potential. When the membrane potential of a neuron exceeds threshold potential, the neuron sends signals to other cells. The neuron that receives the signal is called postsynaptic cell. Synaptic input in a postsynaptic cell can cause the membrane potential of the postsynaptic terminal to increase or decrease. These events are called postsynaptic potentials.
+Action potential is initiated by a certain threshold voltage, called threshold potential. When the membrane potential of a neuron exceeds threshold potential, the neuron sends signals to other cells. The neuron that receives the signal is called postsynaptic cell. Synaptic input in a postsynaptic cell can cause the membrane potential of the postsynaptic cell to increase or decrease. This is called postsynaptic potential and it can cause an action potential in the postsynaptic cell.
 
-Postsynaptic potentials cause small electric currents. When ions start entering the cell near postsynaptic terminal, the concentration of these ions increase in this location and they start to move along a dendrite towards cell body. This movement generates current dipole.
+The following paragraph is based on article \cite{electric_field}. Postsynaptic potentials cause small current flows into the cell. To achieve electroneutrality, a balancing current from the interior to the exterior of the cell is needed. Location, where ions enter the cell is called sink and where ions return to the exterior of the cell is called source. The current from a source to a sink forms a dipole. This is important, because it is possible to measure this electric field produced by these dipoles from the scalp. Although action potentials generate stronger currents, their duration is low and nearby neurons rarely fire synchronously.
 
 \section{Functional neuroimaging}
 \label{sec:neuroimaging}
