--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -1,5 +1,5 @@
 @article{bin2009cca,
-	title={An online multi-channel SSVEP-based brain-computer interface using a canonical correlation analysis method},
+	title={An online multi-channel {SSVEP}-based brain-computer interface using a canonical correlation analysis method},
 	author={Guangyu Bin and Xiaorong Gao and Zheng Yan and Bo Hong and Shangkai Gao},
 	journal={Journal of Neural Engineering},
 	volume={6},
@@ -75,6 +75,16 @@ Neuron section
 	url={http://hubel.med.harvard.edu/book/bcontex.htm},
 	year={1995},
 	publisher={Henry Holt and Company}
+}
+
+@article{electric_field,
+	title={The origin of extracellular fields and currents--{EEG, ECoG, LFP} and spikes},
+	author={Buzsáki G. and Anastassiou C.A. and Koch C.},
+	year={2012},
+	volume={13},
+	number={6},
+	pages={407-20},
+	url={http://www.nature.com.ezproxy.utlib.ee/nrn/journal/v13/n6/full/nrn3241.html}
 }
 
 Brain imaging techniques comparison
