Replace minipage with subfigures. Add 10-20 system text.

--- a/thesis/myStyle.sty
+++ b/thesis/myStyle.sty
@@ -3,6 +3,7 @@
 \usepackage[toc,page]{appendix} 		% nice appendix
 \usepackage{url} 						% to add url in bib
 \usepackage{tablefootnote}				% add footnotes to tables
+\usepackage{subcaption}					% for subfigures
 
 \usepackage[nogroupskip]{glossaries}	% for acronyms
 \renewcommand{\glossarysection}[2][]{}	% no title for glossary
