--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -43,8 +43,7 @@
 	DOI={10.1109/MCSE.2007.58}
 }
 
-
-EEG chapter
+Electrical activity in the brain
 Neuron section
 
 @article{neuroncount,
@@ -83,7 +82,8 @@ Neuron section
 	year={2012},
 	volume={13},
 	number={6},
-	pages={407-20},
+	pages={407--20},
+	journal={Nature Reviews Neuroscience},
 	url={http://www.nature.com.ezproxy.utlib.ee/nrn/journal/v13/n6/full/nrn3241.html}
 }
 
@@ -111,6 +111,38 @@ Brain imaging techniques comparison
 	pages = {202–-208},
 	number = {2},
 	url = {http://www.nmr.mgh.harvard.edu/meg/pdfs/halgren/Dale_CurOpNBrev01.pdf}
+}
+
+@book{action_potential_pic,
+	title = {Biology: Concepts and Connection},
+	author = {Campell, Neil A. and Jane B. Reece and Martha R. Taylor and Eric J. Simon and Dickey, Jean L.},
+	year = {2008},
+	publisher = {Benjamin Cummings},
+	edition = {6},
+	url = {http://wps.pearsoncustom.com/wps/media/objects/5697/5834441/ebook/htm/0cc6e.htm?28.05},
+	city = {San Francisico}
+}
+
+EEG section
+
+@article{field_count,
+	title = {Neurophysiologic Basis of {EEG}},
+	author = {Piotr Olejniczak},
+	journal = {Journal of Clinical Neurophysiology},
+	volume = {23},
+	number = {3},
+	pages = {186--9},
+	year = {2006},
+	url = {http://www.braincoretherapy.com/wp-content/uploads/2014/01/Neurophysiologic-Basis-of-EEG.pdf}
+}
+
+@book{neuroscience,
+	title = {Neuroscience},
+	editor = {Dale Purves and George J. Augustine and David Fitzpatrick and William C. Hall and Anthony-Samuel Lamantia and James O. McNamara and S. Mark Williams},
+	publisher = {Sinauer Associates Inc},
+	year = {2004},
+	edition = {3},
+	url = {https://www.hse.ru/data/2011/06/22/1215686482/Neuroscience.pdf}
 }
 
 Example
