Add ERP text. Add the beginning of VEP text.

--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -145,6 +145,28 @@ EEG section
 	url = {https://www.hse.ru/data/2011/06/22/1215686482/Neuroscience.pdf}
 }
 
+@book{ERP,
+	title = "Quantitative EEG, Event-Related Potentials and Neurotherapy",
+	publisher = "Academic Press",
+	address = "San Diego",
+	year = "2009",
+	isbn = "978-0-12-374512-5",
+	doi = "http://dx.doi.org/10.1016/B978-0-12-374512-5.50037-1",
+	url = "http://www.sciencedirect.com/science/article/pii/B9780123745125500371",
+	author = "Juri D. Kropotov"
+}
+
+@book{VEP,
+	title = "The Cognitive Electrophysiology of Mind and Brain",
+	editor = "Alberto Zani and Alice Mado Proverbio and Michael I. Posner",
+	publisher = "Academic Press",
+	address = "San Diego",
+	year = "2003",
+	isbn = "978-0-12-775421-5",
+	doi = "http://dx.doi.org/10.1016/B978-012775421-5/50000-5",
+	url = "http://www.sciencedirect.com/science/article/pii/B9780127754215500005",
+}
+
 Example
 
 @misc{brain,
