--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -20,7 +20,7 @@
 %\usepackage{layout}
 %\printinunitsof{pt}
 
-\includeonly{./tex/abstract, ./tex/title_page, ./tex/appendices, ./tex/introduction, ./tex/EEG, ./tex/BCI, ./tex/conclusion, ./tex/SSVEP_BCI}
+\includeonly{./tex/abstract, ./tex/title_page, ./tex/appendices, ./tex/introduction, ./tex/EEG, ./tex/BCI, ./tex/conclusion, ./tex/SSVEP_BCI, ./tex/results}
 \begin{document}
 
 %\layout
@@ -35,6 +35,7 @@
 \include{./tex/EEG}
 \include{./tex/BCI}
 \include{./tex/SSVEP_BCI}
+\include{./tex/results}
 \addcontentsline{toc}{chapter}{Conclusion}
 \include{./tex/conclusion}
 
