Replace acr commands with gls commands. Add SSVEP text.

--- a/thesis/tex/BCI.tex
+++ b/thesis/tex/BCI.tex
@@ -3,6 +3,7 @@
 \section{Visual stimulus}
 asd
 \section{Steady-state VEP BCI}
+\label{SSVEP_detection}
 \subsection{Power spectral density analysis}
 Power Spectral density (PSD) analysis is widely used in SSVEP BCIs\cite{bin2009cca}.
 \subsection{Canonical correlation analysis}
