--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -62,7 +62,8 @@ Neuron section
     publisher = {U. S. Department of Health and Human Services, National Institutes of Health},
     note      = {(NIH Publication No. 02-3782)},
     year      = {2002},
-    url		  = {http://www.bu.edu/alzresearch/files/pdf/ADEARUnravelingtheMystery12-033.pdf}
+    url		  = {http://www.bu.edu/alzresearch/files/pdf/ADEARUnravelingtheMystery12-033.pdf},
+    key		  = {U. S. Department of Health and Human Services}
 }
 
 @book{neuralpathway,
@@ -136,15 +137,6 @@ EEG section
 	url = {http://www.braincoretherapy.com/wp-content/uploads/2014/01/Neurophysiologic-Basis-of-EEG.pdf}
 }
 
-@book{neuroscience,
-	title = {Neuroscience},
-	editor = {Dale Purves and George J. Augustine and David Fitzpatrick and William C. Hall and Anthony-Samuel Lamantia and James O. McNamara and S. Mark Williams},
-	publisher = {Sinauer Associates Inc},
-	year = {2004},
-	edition = {3},
-	url = {https://www.hse.ru/data/2011/06/22/1215686482/Neuroscience.pdf}
-}
-
 @book{ERP,
 	title = "Quantitative EEG, Event-Related Potentials and Neurotherapy",
 	publisher = "Academic Press",
@@ -165,6 +157,37 @@ EEG section
 	isbn = "978-0-12-775421-5",
 	doi = "http://dx.doi.org/10.1016/B978-012775421-5/50000-5",
 	url = "http://www.sciencedirect.com/science/article/pii/B9780127754215500005",
+}
+
+VEP section
+
+@book{neuroscience,
+	title = {Neuroscience},
+	editor = {Dale Purves and George J. Augustine and David Fitzpatrick and William C. Hall and Anthony-Samuel Lamantia and James O. McNamara and S. Mark Williams},
+	publisher = {Sinauer Associates Inc},
+	year = {2004},
+	edition = {3},
+	url = {https://www.hse.ru/data/2011/06/22/1215686482/Neuroscience.pdf}
+}
+
+@article{VEP_size,
+	title = {Effects of Attention on Pattern-Reversal Visual Evoked Potentials: Foveal Field Stimulation Versus Peripheral Field Stimulation},
+	author = {Minoru Hoshiyama and Ryusuke Kakigi},
+	journal = {Brain Topography},
+	year = {2001},
+	volume = {13},
+	number = {4},
+	pages = {293--8}
+}
+
+@article{blausen,
+	title = {Blausen.com staff. {Blausen} gallery 2014},
+	journal = {Wikiversity Journal of Medicine},
+	volume = {1},
+	number = {2},
+	year = {2014},
+	url = {https://en.wikiversity.org/wiki/Blausen_gallery_2014},
+	key = {Blausen.com staff}
 }
 
 Example
