Add Emotiv EPOC text. Add missing pictures. Add EEG devices comparison table.

--- a/thesis/thesis.bib
+++ b/thesis/thesis.bib
@@ -144,7 +144,7 @@ EEG section
 	year = "2009",
 	isbn = "978-0-12-374512-5",
 	doi = "http://dx.doi.org/10.1016/B978-0-12-374512-5.50037-1",
-	url = "http://www.sciencedirect.com/science/article/pii/B9780123745125500371",
+	url = "http://www.sciencedirect.com/science/article/pii/B9780123745125500371, https://books.google.ee/books?id=szECZPz7FvcC&pg=PA119&lpg=PA119&dq=eeg+electrode+voltmeter&source=bl&ots=Cn8b4k6NAJ&sig=374G9H2wKm9qWHzaDNsFJM_vgR8&hl=et&sa=X&ei=ahjNVPG-FMe7PaLtgIgJ&ved=0CGAQ6AEwCw#v=onepage&q=voltmeter&f=false",
 	author = "Juri D. Kropotov"
 }
 
