--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -14,6 +14,7 @@
 \newacronym{ERP}{ERP}{event-related potential}
 \newacronym{VEP}{VEP}{visual evoked potential}
 \newacronym{SSVEP}{SSVEP}{steady-state visual evoked potential}
+\newacronym{ADC}{ADC}{analog-to-digital converter}
 
 % Packages for layout testing
 
